# brewmble

./: .actrc  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT_BRIEF.md  README.md  ROADMAP.md
.github/workflows/: build-daemon.yml
cli/: .cobbler.yaml  Cargo.toml  Makefile  README.md
cli/src/: main.rs
daemon/: .env.sample  Cargo.toml  Containerfile  Makefile  README.md  brewmbled.service
daemon/src/: main.rs
daemon/src/package_manager/: apt.rs  brew.rs  mod.rs
docs/: README.md  brewmbled.service.sample  com.github.hebra.brewmble.brewmbled.plist.sample
plans/: 1784517824852-daemon-config-reboot-cleanup.md  roadmap.md
rest/: Cargo.toml  Makefile  README.md
rest/src/: lib.rs
web/: Makefile  README.md
