[package]
name = "brewmble"
version = "0.1.0"
edition = "2021"

[dependencies]
brewmble-rest = { path = "../rest" }
clap = { version = "4", features = ["derive", "env"] }
humantime = "2.1"
flume = "0.10"
mdns-sd = "0.9"
tabwriter = "1.4"
home = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
keyring = "2.3.2"
