[package]
name = "cobblerd"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
apt-pkg-native = "0.3.3"

[dependencies]
cobbler-rest = { path = "../rest" }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
gethostname = "0.5"
mdns-sd = "0.9.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
