[package]
name = "brewmbled"
version = "0.1.0"
edition = "2024"

[dependencies]
brewmble-rest = { path = "../rest" }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
gethostname = "1.1"
mdns-sd = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.23", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
